# cicd-goat

./: .gitignore  .gitmodule  .gitmodules  CODEOWNERS  CONTRIBUTING.md  Pipfile  README.md  Readme.md  Spoilers.md  apply.sh  break-glass.md  build.sh  commit.sh  ctfd.Dockerfile  docker-compose-dev.yaml  docker-compose.override.yml  docker-compose.yaml  gitea.Dockerfile  jenkins-agent.Dockerfile  prepare.py  rename.py  requirements.txt  wait.sh
.circleci/: config.yaml  config.yml
agent-keys/: id_rsa
ctfd/: Dockerfile  ctfd.db
gitea/: Dockerfile  Pipfile  gitea.db  gitea.yaml  run  run.sh
gitlab/: .terraform.lock.hcl  Dockerfile  askpass.py  check_git.py  gitlab.tf  repositories.sh  run.sh
gitlab-runner/: Dockerfile  run.sh
gitlab/repositories/pygryphon/: .gitignore  .travis.yml  LICENSE  README.rst  pyproject.toml
gitlab/repositories/pygryphon/not.git/: COMMIT_EDITMSG  ORIG_HEAD  config  index
gitlab/repositories/pygryphon/not.git/logs/: HEAD
gitlab/repositories/pygryphon/not.git/logs/refs/heads/: main
gitlab/repositories/pygryphon/not.git/objects/pack/: pack-3cd5ccc58325db66d66699c686377fd85022ada2.idx  pack-3cd5ccc58325db66d66699c686377fd85022ada2.pack
gitlab/repositories/pygryphon/not.git/refs/heads/: main
gitlab/repositories/pygryphon/src/pygryphon/: greet.py
gitlab/repositories/pygryphon/tests/: tests.py
jenkins/: Dockerfile
jenkins-agent/: Dockerfile
jenkins-server/: Dockerfile  casc-orig.yaml  casc.yaml  cleanup  flag5  jenkins.yaml  plugins.txt  run.sh  secrets.properties
jenkins_agent/: Dockerfile
jenkins_server/: Dockerfile  (+2 more)
(+1560 files in other folders)
